Prova de commit
Això només és una prova

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
       <div id="barrasup">
-          <div id="xxss"><a href="https://tripulacio.pirata.cat" target="_blank">Accés per a afiliats</a></div>
+          <div id="xxss"><a href="https://tripulacio.pirata.cat" target="_blank">Accés per a afiliades</a></div>
           </div>
     <div id="bloc1">
       <video autoplay loop muted class="banner__video">
